--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -2,7 +2,10 @@
     Typography
 ============= */
 body{
-    font-family: 'Roboto', sans-serif;
+    p{font-family: 'M PLUS Rounded 1c';font-size: 22px;}
+   h1{font-family: 'Sansita Swashed';font-size: 22px;}
+   h2{font-family: 'Sansita Swashed';font-size: 22px;}
+   nav{font-family: 'M PLUS Rounded 1c';font-size: 22px;}
     // font-family: 'Roboto Slab', serif;
 
 h1,h2,h3,h4{
