Font added to index

--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -2,20 +2,20 @@
     Typography
 ============= */
 body{
+    h1{font-family: 'Sansita Swashed';font-size: 22px;}
+    h2{font-family: 'Sansita Swashed';font-size: 22px;}
+    font-family: 'M PLUS Rounded 1c';font-size: 22px;
     p{font-family: 'M PLUS Rounded 1c';font-size: 22px;}
-   h1{font-family: 'Sansita Swashed';font-size: 22px;}
-   h2{font-family: 'Sansita Swashed';font-size: 22px;}
-   nav{font-family: 'M PLUS Rounded 1c';font-size: 22px;}
-    // font-family: 'Roboto Slab', serif;
 
-h1,h2,h3,h4{
+
+    h1,h2,h3,h4{
     margin: 0;
     padding: 0;
-}
+    }
 
-p{
+    p{
     margin: 0;
     padding: 0;
-}
+    }
 
 }
