--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -372,7 +372,7 @@ a {
 /* =============
     Typography
 ============= */
-body p {
+body {
   font-family: "M PLUS Rounded 1c";
   font-size: 22px;
 }
@@ -384,7 +384,7 @@ body h2 {
   font-family: "Sansita Swashed";
   font-size: 22px;
 }
-body nav {
+body p {
   font-family: "M PLUS Rounded 1c";
   font-size: 22px;
 }
