--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -454,6 +454,9 @@ header {
   filter: drop-shadow(0px 2px 6px rgba(0, 0, 0, 0.1));
   z-index: 100;
 }
+header nav {
+  color: #72543A;
+}
 header > div {
   display: grid;
   grid-template-columns: 20% auto;
