--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -4,7 +4,7 @@
 body{
     h1{font-family: 'Sansita Swashed';font-size: 22px;}
     h2{font-family: 'Sansita Swashed';font-size: 22px;}
-    font-family: 'M PLUS Rounded 1c';font-size: 22px;
+    a{font-family: 'M PLUS Rounded 1c';font-size: 22px;}
     p{font-family: 'M PLUS Rounded 1c';font-size: 22px;}
 
 
