--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -26,6 +26,12 @@
             background-image: url("../img/hero.jpg");
             background-position: center;
             background-size: cover;
+            
+            background-image{
+                background-image: url("../img/hero.jpg");
+             filter: blur(8px);
+                -webkit-filter: blur(8px);
+            }
 
             #hero-content{
                 color:$white;
@@ -35,7 +41,7 @@
                     font-size: rem-calc(80);
                     font-weight: 900;
                     line-height: 117px;
-                    text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.2);
+                    text-shadow: 0px 10px 2px rgba(0, 0, 0, 0.2);
     
                     @include md{
                         font-size: rem-calc(90);
@@ -51,7 +57,7 @@
                     font-size: rem-calc(32);
                     font-weight: 400;
                     line-height: 47px;
-                    text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.25);
+                    text-shadow: 0px 8px 2px rgba(0, 0, 0, 0.25);
                     margin-top: -25px;
     
                     @include md{
