--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -28,8 +28,8 @@
             background-size: cover;
             
             background-image{
-                background-image: url("../img/hero.jpg");
-             filter: blur(8px);
+                //background-image: url("../img/hero.jpg");
+                filter: blur(8px);
                 -webkit-filter: blur(8px);
             }
 
